--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:oracle:thin:@192.168.16.23:1521:qatmscapu
-spring.datasource.username=PCENTRAL
+spring.datasource.username=pcentral
 spring.datasource.password=pcentral
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
